<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.iniongun.tivbible.reader.read.ReadViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/versesTapActionsBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/closeButton"
            style="@style/AppButton.Text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:icon="@drawable/ic_expand_down"
            app:iconPadding="0dp"
            app:iconTint="?android:attr/textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/selectedVersesTextView"
            style="@style/AppText.Header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_content_margin"
            android:layout_marginLeft="@dimen/standard_content_margin"
            android:layout_marginTop="@dimen/standard_content_margin"
            android:layout_marginEnd="@dimen/standard_content_margin"
            android:layout_marginRight="@dimen/standard_content_margin"
            android:gravity="start"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/closeButton"
            tools:text="@string/selected_verses_text" />

        <HorizontalScrollView
            android:id="@+id/buttonsHorizontalScrollView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scrollbarAlwaysDrawHorizontalTrack="true"
            android:layout_marginStart="@dimen/standard_content_margin"
            android:layout_marginLeft="@dimen/standard_content_margin"
            android:layout_marginTop="@dimen/standard_content_margin"
            android:layout_marginEnd="@dimen/standard_content_margin"
            android:layout_marginRight="@dimen/standard_content_margin"
            app:layout_constraintTop_toBottomOf="@id/selectedVersesTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/shareButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/standard_content_margin"
                    android:layout_marginRight="@dimen/standard_content_margin"
                    android:backgroundTint="?attr/colorSurface"
                    android:elevation="@dimen/standard_mid_margin"
                    android:text="@string/share_text"
                    android:textAllCaps="false"
                    android:textColor="?android:attr/textColorPrimary"
                    app:icon="@drawable/ic_share"
                    app:iconGravity="textEnd"
                    app:iconTint="?android:attr/textColorPrimary"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bookmarkButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/standard_content_margin"
                    android:layout_marginRight="@dimen/standard_content_margin"
                    android:backgroundTint="?attr/colorSurface"
                    android:elevation="@dimen/standard_mid_margin"
                    android:text="@string/bookmark_text"
                    android:textAllCaps="false"
                    android:textColor="?android:attr/textColorPrimary"
                    app:icon="@drawable/ic_bookmark"
                    app:iconGravity="textEnd"
                    app:iconTint="?android:attr/textColorPrimary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/copyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/standard_content_margin"
                    android:layout_marginRight="@dimen/standard_content_margin"
                    android:backgroundTint="?attr/colorSurface"
                    android:elevation="@dimen/standard_mid_margin"
                    android:text="@string/copy_text"
                    android:textAllCaps="false"
                    android:textColor="?android:attr/textColorPrimary"
                    app:icon="@drawable/ic_copy"
                    app:iconGravity="textEnd"
                    app:iconTint="?android:attr/textColorPrimary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/takeNotesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/standard_content_margin"
                    android:layout_marginRight="@dimen/standard_content_margin"
                    android:backgroundTint="?attr/colorSurface"
                    android:elevation="@dimen/standard_mid_margin"
                    android:text="@string/take_notes_text"
                    android:textAllCaps="false"
                    android:textColor="?android:attr/textColorPrimary"
                    app:icon="@drawable/ic_notes"
                    app:iconGravity="textEnd"
                    app:iconTint="?android:attr/textColorPrimary" />

            </LinearLayout>

        </HorizontalScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/highlightWithLabelTextView"
            style="@style/AppText.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/highlight_with_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonsHorizontalScrollView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/verseHighlightColorsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_mid_margin"
            android:layout_marginEnd="@dimen/standard_mid_margin"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/highlightWithLabelTextView"
            tools:listitem="@layout/single_highlight_layout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>